fix: tidy spacing on login screen

--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -20,16 +20,14 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   padding: 40px;
-  height: auto;
 }
 
 .infoContainer {
   display: flex;
   flex-direction: column;
-  gap: 40px;
-  padding: 60px 0px;
+  padding: 20px 0px;
 }
 
 .logoIcon {
